# fuck47

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  TODO.md  cli.py  config.py  dokploy.yml  exclude_urls.csv  main.py  opencode.jsonc  pyproject.toml  requirements.txt  ruff.toml  skills-lock.json
.claude/: settings.json
.dokploy-state/: prod.json
.github/: actionlint.yaml
.github/workflows/: ci.yml  news-refresh.yml  static.yml
.impeccable/live/: config.json
.serena/: project.yml
app/: index.html
app/archive/: 2026-07-03.html  2026-07-05.html  2026-07-06.html  2026-07-07.html  2026-07-08.html  2026-07-09.html  2026-07-10.html  2026-07-11.html  2026-07-12.html  2026-07-13.html  2026-07-14.html  2026-07-15.html  2026-07-16.html  2026-07-17.html  2026-07-18.html  2026-07-19.html  2026-07-20.html  2026-07-21.html  2026-07-22.html  2026-07-23.html  2026-07-24.html  index.html
backlog/: config.yml
backlog/docs/: doc-001 - PRD-DJT-News-Sentiment-Analysis-Feature.md
backlog/tasks/: task-001 - News-Aggregation-System.md  task-001.01 - NewsAPI-integration.md  task-001.02 - RSS-feed-parsing.md  task-001.03 - DJT-keyword-search-configuration.md  task-001.04 - Secure-API-key-configuration.md  task-001.05 - Article-storage-and-stale-data-cleanup.md  task-002 - Content-Filtering-Sentiment-Analysis.md  task-002.01 - DJT-relevance-filtering.md  task-002.02 - Add-LLM-based-sentiment-judge-scoring.md  (+36 more)
docs/: CNAME  DESIGN.md  ai.md  ci.md  index.html  index.md  prd-djt-news-sentiment.md
scripts/: download_image.py
tasks/: prd-trump-news-sentiment.md  tasks-prd-trump-news-sentiment.md  tasks-prd.md
tests/: test_cli.py  test_cli_add_article.py  test_cli_import_upnote.py  test_cli_merge_reviewed.py  test_cmd.py  test_db.py  test_filter.py  test_main.py  test_newsapi.py  test_ratelimit.py  test_render.py  test_retry.py  test_rss.py  test_scrape.py  test_sentiment.py  test_upnote.py
utils/: db.py  filter.py  newsapi.py  ratelimit.py  render.py  retry.py  rss.py  scrape.py  sentiment.py  upnote.py
(+29 files in other folders)
